tests/lean/doLetLoop.lean.expected.out
doLetLoop.lean:5:0: error: unexpected end of input
doLetLoop.lean:4:2-4:8: error: unexpected `do` element syntax
  failed to pretty print term (use 'set_option pp.rawOnError true' for raw representation)
